# funda

./: .gitignore  pyproject.toml  test  test.csv  test_gpt.py  tmp.md
.devcontainer/: devcontainer.json
funda/: copilot.py  main.py  map.py  markdown.py  preprocess.py  report.py  routing.py  scraper.py  telegram.py  types.py  utils.py
funda/config/: core.py
