[tool.poetry]
name = "funda"
version = "0.1.0"
description = ""
authors = ["berthin <berthin@acm.org>"]
readme = "README.md"

[tool.poetry.scripts]
funda = 'funda.main:app'

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
scrapy = "^2.11.1"
pandas = "^2.2.2"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
