[tool.poetry]
name = "funda"
version = "0.1.0"
description = ""
authors = ["berthin <berthin@acm.org>"]
readme = "README.md"

[tool.poetry.scripts]
funda = 'funda.main:app'

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
scrapy = "^2.11.1"
pandas = "^2.2.2"
pyyaml = "^6.0.1"
requests = "^2.31.0"
bs4 = "^0.0.2"
tqdm = "^4.66.4"
geopy = "^2.4.1"
staticmap = "^0.5.7"
python-telegram-bot = "^21.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
